test/runnable/link12010.d
// COMPILE_SEPARATELY
// EXTRA_SOURCES: imports/a12010.d
// REQUIRED_ARGS: -release
// -release is necessary to avoid __assert.

import imports.a12010;
void main() {}
