test/fail_compilation/test2830d.d
// REQUIRED_ARGS: -d
module test2830d;

import imports.test2830d;

void foo()
{
    TestTypedef s;
}
